# linear_hash_experiments

./: .gitignore  CMakeLists.txt  README.md  main.cpp  relatorio_uso_ia.md
analysis/: README.md  config.py
analysis/data/processed/: master_results.csv  raw_results.csv
analysis/scripts/: 01_load_and_validate.py  02_build_master_table.py  03_plot_search_costs.py  04_plot_memory_overflow.py  05_plot_tradeoffs.py  06_generate_report_tables.py
analysis/tables/: automatic_interpretation.md  summary_metrics.csv  table_memory.csv  table_search_costs.csv  table_splits.csv
experiments/: p100_a060.json  p100_a075.json  p100_a090.json  p10_a060.json  p10_a075.json  p10_a090.json  p50_a060.json  p50_a075.json  p50_a090.json
libs/include/: BucketPage.hpp  HashStats.hpp  LinearHashing.hpp  Record.hpp
libs/source/: BucketPage.cpp  HashStats.cpp  LinearHashing.cpp
scripts/: generate_experiments.py  run_all_experiments.sh  run_analysis.sh
src/include/: CsvWriter.hpp  ExperimentConfig.hpp  ExperimentRunner.hpp  RandomKeyGenerator.hpp
src/source/: CsvWriter.cpp  ExperimentConfig.cpp  ExperimentRunner.cpp  RandomKeyGenerator.cpp
